--- a/app/src/main/res/layout/activity_new_task_add.xml
+++ b/app/src/main/res/layout/activity_new_task_add.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/BackArrow"
                 style="@style/iconColorStyle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="19dp"
                 android:layout_marginLeft="@dimen/_16sdp"
                 android:layout_marginTop="@dimen/_16sdp"
                 android:src="@drawable/baseline_arrow_back_24" />
