--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,7 @@
         android:textStyle="bold"
         android:textColor="@color/black"/>
 
-    <TextView
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Email"
@@ -33,7 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Password"
@@ -54,5 +54,14 @@
             android:src="@drawable/hide"/>
 
     </RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Forgot password?"
+        android:gravity="center"
+         android:layout_margin="@dimen/_10sdp"
+        android:textSize="@dimen/_12sdp"
+        android:textColor="#3E8CCF"/>
+
 
 </LinearLayout>
