--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -74,6 +74,7 @@
 
 
     <TextView
+        android:id="@+id/loginbtn"
         style="@style/Add_Style"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
